fix for disables on iphone

--- a/public/css/media.css
+++ b/public/css/media.css
@@ -285,7 +285,7 @@
 
 	.expired-token-notifier {
 		top: 35px;
-		left: 10px;
+		left: 10px !important;
 	}
 }
 
